--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 github:
   is_project_page: false
 logo: headshot.png
-name: something
+name: LeeeroyJenkinsss
 title: null
