--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,4 @@ theme: jekyll-theme-minimal
 github:
   is_project_page: false
 logo: headshot.png
-name: LeeeroyJenkinsss
-title: null
+name: Milena Rmus
